--- a/form.html
+++ b/form.html
@@ -49,7 +49,7 @@
                         </form>
                     </li>
                     <li class="menu-top__item menu-top__item--cart">
-                        <a class="menu-top__link menu-top__link--cart" href="#"><i class="menu-top__cart"></i>Корзина: пока пуста</a>
+                        <a class="menu-top__link menu-top__link--cart" href="#"><span class="menu-top__link-cart"></span>Корзина: пока пуста</a>
                     </li>
                     <li class="menu-top__item menu-top__item--delivery">
                         <p class="menu-top__text menu-top__text--delivery">Бесплатная доставка по России</p>
