--- a/index.html
+++ b/index.html
@@ -220,7 +220,11 @@
                    </div>
                 </div>
                 <div class="contacts__map">
-                    <picture class="contacts__picture">
+                    <!-- <div id="map">
+                        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVLQ28aCzVhXLDJnQedaUJfQ_6jA9QDuE&callback=initMap">
+                            </script>
+                    </div>                 -->
+                   <picture class="contacts__picture">
                         <source media="(min-width: 1024px)"
                                 srcset="src/img/map-desktop-2x.webp 2x, src/img/map-desktop-1x.webp 1x" type="image/webp"
                                 srcset="src/img/map-desktop-2x.jpg 2x, src/img/map-desktop-1x.jpg 1x" type="image/jpg">
