--- a/catalog.html
+++ b/catalog.html
@@ -111,17 +111,17 @@
                 </div>
 
                 <div class="catalog__item">
-                  <div class="catalog__img1">
+                  <div class="catalog__img">
 <picture>
-  <source media="(min-width:320px) and (orientation: portrait)"
-   srcset="src/img/item2-mobile-1x.webp 1x, src/img/item2-mobile-2x.webp 2x"
-   srcset="src/img/item2-mobile-1x.jpg 1x, src/img/item2-mobile-2x.jpg 2x">
-  <source media="(min-width:768px) and (orientation:portait)"
-   srcset="src/img/item2-tablet-1x.webp 1x, src/img/item2-tablet-2x.webp 2x"
-   srcset="src/img/item2-tablet-1x.jpg 1x, src/img/item2-tablet-2x.jpg 2x">
 <source media="(min-width: 1024px)"
    srcset="src/img/item2-desktop-1x.webp 1x, src/img/item2-desktop-2x.webp 2x"
   srcset="src/img/item2-desktop-1x.jpg 1x, src/img/item2-desktop-2x.jpg 2x">
+  <source media="(min-width:768px) and (orientation:portait)"
+   srcset="src/img/item2-tablet-1x.webp 1x, src/img/item2-tablet-2x.webp 2x"
+   srcset="src/img/item2-tablet-1x.jpg 1x, src/img/item2-tablet-2x.jpg 2x">
+
+  <source media="(min-width:320px) and (orientation: portrait)" srcset="src/img/item2-mobile-1x.webp 1x, src/img/item2-mobile-2x.webp 2x"
+    srcset="src/img/item2-mobile-1x.jpg 1x, src/img/item2-mobile-2x.jpg 2x">
   <img src="src/img/item2-mobile-1x.jpg" alt="" class="catalog__img">
 </picture>
 </div>
@@ -139,17 +139,17 @@
                 </div>
 
 <div class="catalog__item">
-<div class="catalog__img2">
+<div class="catalog__img">
   <picture>
-    <source media="(min-width:320px) and (orientation: portrait)"
-     srcset="src/img/item3-mobile-1x.webp 1x, src/img/item3-mobile-2x.webp 2x"
-     srcset="src/img/item3-mobile-1x.jpg 1x, src/img/item3-mobile-2x.jpg 2x">
+<source media="(min-width: 1024px)"
+   srcset="src/img/item3-desktop-1x.webp 1x, src/img/item3-desktop-2x.webp 2x"
+   srcset="src/img/item3-desktop-1x.jpg 1x, src/img/item3-desktop-2x.jpg 2x">
     <source media="(min-width:768px) and (orientation:portait)"
      srcset="src/img/item3-tablet-1x.webp 1x, src/img/item3-tablet-2x.webp 2x"
     srcset="src/img/item3-tablet-1x.jpg 1x, src/img/item3-tablet-2x.jpg 2x">
-  <source media="(min-width: 1024px)"
-   srcset="src/img/item3-desktop-1x.webp 1x, src/img/item3-desktop-2x.webp 2x"
-   srcset="src/img/item3-desktop-1x.jpg 1x, src/img/item3-desktop-2x.jpg 2x">
+
+    <source media="(min-width:320px) and (orientation: portrait)" srcset="src/img/item3-mobile-1x.webp 1x, src/img/item3-mobile-2x.webp 2x"
+      srcset="src/img/item3-mobile-1x.jpg 1x, src/img/item3-mobile-2x.jpg 2x">
     <img src="src/img/item3-mobile-1x.jpg" alt="" class="catalog__img">
 </picture>
 </div>
@@ -171,32 +171,29 @@
                 <h3 class="player-video__title">Процесс производства</h3>
                 <!--<a href="" class="player-video__link-pic"></a>-->
                 <span class="player-video__link-pic"></span>
-                  <!--<img src="" alt="" class="player-video__link-pic">-->
 
-          <!--<div class="player-process__description">
-                  <h3 class="player-process__title">Процесс производства</h3>
-              <a href="" class="player-process__link">
-              <img src="" alt="" class="player-process__link-pic">
-              </a>
-            </div>-->
               </div>
             <div class="video-page">
           <div class="video-page__video">
+              <!--<div class="video-page__link-pic"></div>-->
+<button class="video-page__link-pic">
+  <!--<i class="video-page__link-pic"></i>-->
+</button>
 <picture>
-  <source media="(min-width:320px) and (orientation: portrait)"
-   srcset="src/img/video-mobile-1x.webp 1x, src/img/video-mobile-2x.webp 2x"
-    srcset="src/img/video-mobile-1x.jpg 1x, src/img/video-mobile-2x.jpg 2x">
+<source media="(min-width: 1024px)"
+  srcset="src/img/video-desktop.webp "
+   srcset="src/img/video-desktop.png">
   <source media="(min-width:768px) and (orientation:portait)"
    srcset="src/img/video-tablet-1x.webp 1x, src/img/video-tablet-2x.webp 2x"
     srcset="src/img/video-tablet-1x.jpg 1x, src/img/video-tablet-2x.jpg 2x">
-  <source media="(min-width: 1024px)"
-  srcset="src/img/video-desktop.webp "
-   srcset="src/img/video-desktop.png">
+
+   <source media="(min-width:320px) and (orientation: portrait)"
+   srcset="src/img/video-mobile-1x.webp 1x, src/img/video-mobile-2x.webp 2x"
+    srcset="src/img/video-mobile-1x.jpg 1x, src/img/video-mobile-2x.jpg 2x">
   <img src="src/img/video-mobile-1x.jpg" alt="video" class="catalog__img">
 </picture>
 </div>
-              <div class="video-page__link-pic">
-          </div>
+
         </div>
     <div class="video-page__descr">
                       <p> По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
@@ -207,12 +204,18 @@
   <h2 class="modal-ctg__title">Добавить в корзину</h2>
   <p class="modal-ctg__text">Выберите размер</p>
     <div class="modal-ctg__form">
+      <div class="modal-ctg__form--group">
       <input class="modal-ctg__input" type="radio" name="check" checked>
       <label class="modal-ctg__size">S</label>
+      </div>
+      <div class="modal-ctg__form--group">
       <input class="modal-ctg__input" type="radio" name="check">
       <label class="modal-ctg__size">M</label>
+      </div>
+      <div class="modal-ctg__form--group">
       <input class="modal-ctg__input" type="radio" name="check">
       <label class="modal-ctg__size">L</label>
+      </div>
     </div>
     <button  class="btn modal-ctg__btn" id="closeBtn" >Добавить</button>
 </div>
