ссылки в меню на всю ширину, js перестал работать, возможно причина в галп файле, возможно в самих скриптах по отдельности, возможно в подлючении, я не знаю.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="dist/css/main.css">
     <script type="text/javascript" src="src/js/picturefill.js"></script>
+    <script type="text/javascript" src="dist/js/scripts.min.js"></script>
     <link rel="preload" href="dist/js/scripts.min.js" as="script">
     <link rel="preload" href="src/fonts/opensans-regular.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="src/fonts/opensans-bold.woff2" as="font" type="font/woff2" crossorigin>
@@ -220,10 +221,10 @@
                    </div>
                 </div>
                 <div class="contacts__map">
-                    <!-- <div id="map">
+                    <div id="map">
                         <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVLQ28aCzVhXLDJnQedaUJfQ_6jA9QDuE&callback=initMap">
                             </script>
-                    </div>                 -->
+                    </div>                
                    <picture class="contacts__picture">
                         <source media="(min-width: 1024px)"
                                 srcset="src/img/map-desktop-2x.webp 2x, src/img/map-desktop-1x.webp 1x" type="image/webp"
