убрала отрицательный отступ в форме )

--- a/form.html
+++ b/form.html
@@ -79,8 +79,7 @@
                 <fieldset class="form-page__filedset form-page__filedset--radio">
                   <legend class="form-page__legend form-page__legend--radio">Тип</legend>
                     <div class="form-page__inner form-page__inner--radio">
-
-                        <div class="form-page__section form-page__section--radio "   >
+                        <div class="form-page__section form-page__section--radio">
                             <input class="form-page__input form-page__input--radio" type="radio" id="radio-1" name="radio" checked>
                             <label class="form-page__label form-page__label--radio" for="radio-1">Аксессуар для интерьера</label>
                         </div>
@@ -92,9 +91,8 @@
                 </fieldset>
                 <fieldset class="form-page__filedset form-page__filedset--checkbox">
                    <legend class="form-page__legend  form-page__legend--color">Цвет</legend>
-            <div class="form-page__inner  form-page__inner--checkbox">
-
-<div class="form-page__group--checkbox">
+                <div class="form-page__inner  form-page__inner--checkbox">
+                  <div class="form-page__group--checkbox">
                         <div class="form-page__section form-page__section--checkbox">
                            <input class="   form-page__input--checkbox" type="checkbox" id="checkbox-1" name="checkbox" checked>
                            <label class=" form-page__label--checkbox" for="checkbox-1">Белый</label>
@@ -180,8 +178,10 @@
                        <textarea class="form-page__textarea" placeholder="Опишите все ваши пожелания к заказу" ></textarea>
                     </div>
                 </fieldset>
-                <span>*Поля обязательны для заполнения</span>
-                <button class="btn form-page__btn">Отправить заказ</button>
+                <div class="form-page__wrap">
+                    <span>*Поля обязательны для заполнения</span>
+                    <button class="btn form-page__btn">Отправить заказ</button>
+                </div>
         </form>
     </div>
 </main>
