--- a/catalog.html
+++ b/catalog.html
@@ -205,16 +205,16 @@
   <p class="modal-ctg__text">Выберите размер</p>
     <div class="modal-ctg__form">
       <div class="modal-ctg__form--group">
-      <input class="modal-ctg__input" type="radio" name="check" checked>
-      <label class="modal-ctg__size">S</label>
+      <input class="modal-ctg__input" type="radio" name="check" id="radio1" checked>
+      <label class="modal-ctg__size" for="radio1">S</label>
       </div>
       <div class="modal-ctg__form--group">
-      <input class="modal-ctg__input" type="radio" name="check">
-      <label class="modal-ctg__size">M</label>
+      <input class="modal-ctg__input" type="radio" name="check" id="radio2">
+      <label class="modal-ctg__size " for="radio2">M</label>
       </div>
       <div class="modal-ctg__form--group">
-      <input class="modal-ctg__input" type="radio" name="check">
-      <label class="modal-ctg__size">L</label>
+      <input class="modal-ctg__input" type="radio" name="check" id="radio3">
+      <label class="modal-ctg__size" for="radio3">L</label>
       </div>
     </div>
     <button  class="btn modal-ctg__btn" id="closeBtn" >Добавить</button>
