немного отредактировала форму

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header class="header">
         <nav class="nav">
-            <div class="menu-top">
+            <div class="menu-top opened">
                 <div class="menu-top__crown">
                         <a class="menu-top__logo-link" href="index.html">
                             <img class="menu-top__logo-mobile" src="src/img/logo-mobile.png" width="86px" height="35px" alt="Mishka">
@@ -230,7 +230,7 @@
                         <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVLQ28aCzVhXLDJnQedaUJfQ_6jA9QDuE&callback=initMap">
                             </script>
                     </div>
-                   <picture class="contacts__picture">
+                   <picture class="contacts__picture" id="mapImg">
                         <source media="(min-width: 1024px)"
                                 srcset="src/img/map-desktop-2x.webp 2x, src/img/map-desktop-1x.webp 1x" type="image/webp"
                                 srcset="src/img/map-desktop-2x.jpg 2x, src/img/map-desktop-1x.jpg 1x" type="image/jpg">
