--- a/form.html
+++ b/form.html
@@ -145,18 +145,18 @@
             <legend class="form-page__legend form-page__legend--phone">Тел</legend>
             <!-- <div class="form-page__inner form-page__inner--info"> -->
             <div class="form-page__box">
-                <input class="form-page__input--phone" type="number" placeholder="+7 XXX XX XX*" required maxlength="12">
+                <input class="form-page__input--phone" type="number" placeholder="+7 XXX XX XX*" required  size="20" minlength="9" maxlength="14" >
                 <label class="form-page__label--phone"></label>
             </div>
             <legend class="form-page__legend form-page__legend--email">E-mail</legend>
               <div class="form-page__box">
-                <input class="form-page__input--email" type="email" placeholder="Ваш Email*" required>
+                <input class="form-page__input--email" type="email" placeholder="Ваш Email*" required maxlength="30">
                 <label class="form-page__label--email"></label>
               </div>
               <!-- </div> -->
           </fieldset>
         </div>
-        
+
           <fieldset class="form-page__filedset form-page__filedset--checkbox">
             <legend class=" form-page__legend form-page__legend--extra">Доп</legend>
             <div class="form-page__inner form-page__inner--textarea">
