--- a/index.html
+++ b/index.html
@@ -179,8 +179,7 @@
                     </div>
                 </div>
                  <div class="slide-content slider__slide2">
-                    <p class="slider__comment">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков,
-                        как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке,
+                    <p class="slider__comment">В отчаянии, я накупила аксессуаров и игрушек в Мишке,
                         и мои фотографии сразу стали более стильными, а также набирают больше лайков!
                     </p>
                     <div class="slider__user">
@@ -189,9 +188,7 @@
                     </div>
                 </div>
                 <div class="slide-content slider__slide3">
-                    <p class="slider__comment">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков,
-                        как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке,
-                        и мои фотографии сразу стали более стильными, а также набирают больше лайков!
+                    <p class="slider__comment">Мои фотографии сразу стали более стильными, а также набирают больше лайков!
                     </p>
                     <div class="slider__user">
                         <span class="slider__auth">Анастасия Красильникова</span>
