починила карточку товара, слайды меняются вместе с никнеймом

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     </p>
                     <div class="slider__user">
                         <span class="slider__auth">Анастасия Красильникова</span>
-                        <span class="slider__nick">@misssssiskras</span>
+                        <span class="slider__nick">@missy</span>
                     </div>
                 </div>
                 <div class="slide-content slider__slide3">
@@ -192,7 +192,7 @@
                     </p>
                     <div class="slider__user">
                         <span class="slider__auth">Анастасия Красильникова</span>
-                        <span class="slider__nick">@misssssiskras</span>
+                        <span class="slider__nick">@kras</span>
                     </div>
                </div>
                <div class="slider__controls">
