при вводе текста нижняя граница поля меняет цвет/иконка телефона при вводе также изменяет текст

--- a/form.html
+++ b/form.html
@@ -129,34 +129,36 @@
               <div class="form-page__section--name">
                 <label class="form-page__label--name">Имя:</label>
                 <input class="form-page__input-name form-page__input-name--name" type="text" placeholder="Введите ваше имя*" required maxlength="10">
+                <div class="form-page__line form-page__line--name"></div>
               </div>
               <div class="form-page__section--name">
                 <label class="form-page__label form-page__label--name">Фамилия:</label>
                 <input class="form-page__input-name" type="text" placeholder="Укажите фамилию*" required maxlength="25">
+                <div class="form-page__line form-page__line--last"></div>
               </div>
               <div class="form-page__section--name">
                 <label class="form-page__label--name">Отчество:</label>
                 <input class="form-page__input-name" type="text" placeholder="Отчество, если желаете" maxlength="30">
+                <div class="form-page__line form-page__line--last"></div>
               </div>
             </div>
           </fieldset>
           <div class="form-page__inner form-page__inner--info">
           <fieldset class="form-page__filedset form-page__filedset--checkbox">
             <legend class="form-page__legend form-page__legend--phone">Тел</legend>
-            <!-- <div class="form-page__inner form-page__inner--info"> -->
             <div class="form-page__box">
                 <input class="form-page__input--phone" type="number" placeholder="+7 XXX XX XX*" required  size="20" minlength="9" maxlength="14" >
                 <label class="form-page__label--phone"></label>
+                <div class="form-page__line form-page__line--phone"></div>
             </div>
             <legend class="form-page__legend form-page__legend--email">E-mail</legend>
               <div class="form-page__box">
                 <input class="form-page__input--email" type="email" placeholder="Ваш Email*" required maxlength="30">
                 <label class="form-page__label--email"></label>
+                <div class="form-page__line form-page__line--email"></div>
               </div>
-              <!-- </div> -->
           </fieldset>
         </div>
-
           <fieldset class="form-page__filedset form-page__filedset--checkbox">
             <legend class=" form-page__legend form-page__legend--extra">Доп</legend>
             <div class="form-page__inner form-page__inner--textarea">
