Поправил кнопку в  мобильном плеере.Подогнал под перфик пиксел каталог (кроме верхнего меню)

--- a/catalog.html
+++ b/catalog.html
@@ -174,11 +174,10 @@
 
               </div>
             <div class="video-page">
+
           <div class="video-page__video">
-              <!--<div class="video-page__link-pic"></div>-->
-<button class="video-page__link-pic">
-  <!--<i class="video-page__link-pic"></i>-->
-</button>
+
+<button class="video-page__link-pic"></button>
 <picture>
 <source media="(min-width: 1024px)"
   srcset="src/img/video-desktop.webp "
@@ -192,6 +191,7 @@
     srcset="src/img/video-mobile-1x.jpg 1x, src/img/video-mobile-2x.jpg 2x">
   <img src="src/img/video-mobile-1x.jpg" alt="video" class="catalog__img">
 </picture>
+
 </div>
 
         </div>
