индекс под пиксель перфект для десктопа, практически готов, еще в процессе

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                                <p class="menu-top__text menu-top__text--delivery">Бесплатная доставка по России</p>
                            </li>
                            <li class="menu-top__item menu-top__item--new">
-                               <a class="menu-top__link">Новые поступления</a>
+                               <a class="menu-top__link menu-top__link--new">Новые поступления</a>
                            </li>
                            <li class="menu-top__item menu-top__item--sale">
-                                <a class="menu-top__link">Распродажа</a>
+                                <a class="menu-top__link menu-top__link--sale">Распродажа</a>
                            </li>
                    </ul>
             </div>
