--- a/catalog.html
+++ b/catalog.html
@@ -43,7 +43,7 @@
                             </a>
                        </li>
                        <li class="menu-top__item">
-                           <a class="menu-top__link" href="form.html" target="blank">Вязание на заказ</a>
+                           <a class="menu-top__link menu-top__link--form" href="form.html" target="blank">Вязание на заказ</a>
                        </li>
                        <li class="menu-top__item">
                            <form class="search-form"  method="get">
@@ -53,7 +53,7 @@
                            </form>
                        </li>
                        <li class="menu-top__item menu-top__item--cart">
-                            <a class="menu-top__link menu-top__link--cart" href="#"><i class="menu-top__cart"></i>
+                            <a class="menu-top__link menu-top__link--cart" href="#"><span class="menu-top__link-cart"></span>
                                 Корзина: пока пуста
                             </a>
                        </li>
