--- a/form.html
+++ b/form.html
@@ -41,7 +41,7 @@
             <a class="menu-top__link menu-top__link--catalog" href="catalog.html">Каталог товаров</a>
           </li>
           <li class="menu-top__item">
-            <a class="menu-top__link" href="form.html" target="blank">Вязание на заказ</a>
+            <a class="menu-top__link menu-top__link--form" href="form.html" target="blank">Вязание на заказ</a>
           </li>
           <li class="menu-top__item">
             <form class="search-form" method="get">
