доработка планшетной и десктопной версии формы

--- a/form.html
+++ b/form.html
@@ -124,7 +124,7 @@
             </div>
           </fieldset>
           <fieldset class="form-page__filedset form-page__filedset--checkbox">
-            <legend class="form-page__legend form-page__legend--name">Фио</legend>
+              <legend class="form-page__legend form-page__legend--name">Фио</legend>
             <div class="form-page__inner form-page__inner--name">
               <div class="form-page__section--name">
                 <label class="form-page__label--name">Имя:</label>
@@ -152,7 +152,8 @@
                 <div class="form-page__line form-page__line--phone"></div>
             </div>
             <legend class="form-page__legend form-page__legend--email">E-mail</legend>
-              <div class="form-page__box">
+             <div class="form-page__box form-page__box--email">
+
                 <input class="form-page__input--email" type="email" placeholder="Ваш Email*" required maxlength="30">
                 <label class="form-page__label--email"></label>
                 <div class="form-page__line form-page__line--email"></div>
