исправил название id в модалке,подправил кнопку на видео плеере,форма и каталог подогнаны под перфик пиксел,поправил иконки в футоре(вроде не прыгают)

--- a/catalog.html
+++ b/catalog.html
@@ -32,7 +32,7 @@
                     <ul class="menu-top__list closed" id="menuList">
                         <li class="menu-top__logo">
                             <a class="menu-top__logo-link" href="index.html">
-                                <!--<img class="menu-top__logo-mobile" src="src/img/logo-mobile.png" width="86px" height="35px" alt="Mishka">-->
+                          
                                 <img class="menu-top__logo-tablet" src="src/img/logo-tablet.png" width="113px" height="46px" alt="Mishka">
                                 <img class="menu-top__logo-desktop" src="src/img/logo-desktop.png" width="149px" height="72px" alt="Mishka">
                             </a>
@@ -169,7 +169,7 @@
             <section class="player-video">
               <div class="player-video__description">
                 <h3 class="player-video__title">Процесс производства</h3>
-                <!--<a href="" class="player-video__link-pic"></a>-->
+
                 <span class="player-video__link-pic"></span>
 
               </div>
@@ -198,9 +198,10 @@
     <div class="video-page__descr">
                       <p> По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
                 </div>
-<button class="btn player__btn" id="myBtn" >Сделать заказ</button>
+<button class="btn player__btn" id="btn" >Сделать заказ</button>
 
-<div class="modal-ctg"  id="myModal">
+<div class="modal-ctg" id="modal">
+
   <h2 class="modal-ctg__title">Добавить в корзину</h2>
   <p class="modal-ctg__text">Выберите размер</p>
     <div class="modal-ctg__form">
@@ -220,7 +221,7 @@
     <button  class="btn modal-ctg__btn" id="closeBtn" >Добавить</button>
 </div>
 
-<div class="overlay" id="myOverlay"     ></div>
+<div class="overlay" id="overlay"></div>
 
 </section>
        </main>
@@ -234,13 +235,13 @@
                </div>
                <div class="footer__social">
                     <a class="footer__link footer__insta" href="#">
-                        <!-- <span class="footer__insta"></span> -->
+
                     </a>
                     <a class="footer__link footer__facebook" href="#">
-                        <!-- <span class="footer__facebook"></span> -->
+
                     </a>
                     <a class="footer__link footer__twitter" href="#">
-                        <!-- <span class="footer__twitter"></span> -->
+
                     </a>
                </div>
                <div class="footer__copyright">
