--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <ul class="menu-top__list closed" id="menuList">
                             <li class="menu-top__logo">
                                 <a class="menu-top__logo-link" href="index.html">
-                                    
+
                                     <img class="menu-top__logo-tablet" src="src/img/logo-tablet.png" width="113px" height="46px" alt="Mishka">
                                     <img class="menu-top__logo-desktop" src="src/img/logo-desktop.png" width="149px" height="72px" alt="Mishka">
                                 </a>
@@ -102,6 +102,7 @@
                           <td class="catalog-card__cell table__cell">15 см</td>
                        </tr>
                    </table>
+
                 </div>
                 <div class="catalog-card__picture">
                     <picture>
@@ -122,7 +123,7 @@
 
                     <button class="btn catalog-card__btn" id="myBtn" >Заказать</button>
 </div>
-<div class="modal-ctg" id="myModal" >
+<div class="modal-ctg" id="modal" >
   <h2 class="modal-ctg__title">Добавить в корзину</h2>
   <p class="modal-ctg__text">Выберите размер</p>
   <div class="modal-ctg__form">
@@ -141,7 +142,7 @@
   </div>
   <button class="btn modal-ctg__btn" id="closeBtn" >Добавить</button>
 </div>
-<div class="overlay" id="myOverlay" ></div>
+<div class="overlay" id="overlay" ></div>
           </div>
       </section>
       <section class="decoration">
