изменения в каталоге и форме

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <div class="catalog-card__to-buy">
                     <p class="catalog-card__price">Цена: 990 руб.</p>
 
-                    <button class="btn catalog-card__btn" id="myBtn" >Заказать</button>
+                    <button class="btn catalog-card__btn" id="btn" >Заказать</button>
 </div>
 <div class="modal-ctg" id="modal" >
   <h2 class="modal-ctg__title">Добавить в корзину</h2>
